Bug 40910 - Subset does not take override maps into account
Summary: Subset does not take override maps into account
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: alsa (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-15 07:38 UTC by David Henningsson
Modified: 2012-02-09 01:12 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch to resolve the problem (1.76 KB, patch)
2012-02-02 03:48 UTC, David Henningsson
Details | Splinter Review

Description David Henningsson 2011-09-15 07:38:13 UTC
In this scenario analog-output is considered a subset of analog-output-lfe-on-mono, which I guess it shouldn't be since the override-maps for "Master" are different between the two profiles.

See 

https://bugs.launchpad.net/bugs/827393

in particular

https://bugs.launchpad.net/ubuntu/+source/pulseaudio/+bug/827393/+attachment/2404188/+files/pulseverbose.log
Comment 1 David Henningsson 2012-02-02 03:48:35 UTC
Created attachment 56510 [details] [review]
Patch to resolve the problem


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.